--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" & exit 1",
-    "start": "tsc && node ./build/src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node ./build/src/app.js",
     "start-server-dev": "tsx watch src/app.ts dev",
     "import-data": "tsx src/dev-data/data/import-dev-data.ts --import",
     "delete-data": "tsx src/dev-data/data/import-dev-data.ts --delete"
