--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.1.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.13.1",
