--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.1.2",
+    "@mui/x-data-grid": "^8.17.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.13.1",
     "express-async-errors": "^3.1.1",
-    "firebase": "^12.0.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.6.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "rxjs": "^7.8.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
