add Google OAuth

--- a/backend/.env
+++ b/backend/.env
@@ -6,10 +6,14 @@ DATABASE_PASSWORD=jhBM7cjQpis5Gmls
 DATABASE=mongodb+srv://dmitriibank:<PASSWORD>@cluster0.vwocpad.mongodb.net/quiz-db?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_LOCAL=mongodb://localhost:27017/quiz-db
 
+SERVER_URL=http://localhost:3555
+
 JWT_SECRET=super-secret-key-for-jwt-token
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
+GOOGLE_CLIENT_ID=34961879885-8piud33nv99mlehq4u2c5co4is158kcc.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 EMAIL_USERNAME=dafe1509240759
 EMAIL_PASSWORD=9a420cf5d52bd5
