add login with google

--- a/backend/.env
+++ b/backend/.env
@@ -12,8 +12,11 @@ JWT_SECRET=super-secret-key-for-jwt-token
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
+SESSION_SECRET=another-super-secret-key-for-sessions-change-this-in-production
+
 GOOGLE_CLIENT_ID=34961879885-8piud33nv99mlehq4u2c5co4is158kcc.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_URL=http://localhost:5173
 
 EMAIL_USERNAME=dafe1509240759
 EMAIL_PASSWORD=9a420cf5d52bd5
