--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ node_modules/
 .DS_Store
 backend/node_modules/
 frontend/node_modules/
-logs/
-.env
+backend/logs/
+backend/.env
+frontend/.env
 *.log
 
